tooling/nargo_cli/tests/snapshots/execution_success/signed_division/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
use std::ops::WrappingSub;

fn main(mut x: i32, mut y: i32, mut z: i32) {
    assert((x / y) == z);
    let minus_x: i32 = (0 as i32).wrapping_sub(x);
    let minus_z: i32 = (0 as i32).wrapping_sub(z);
    let minus_y: i32 = (0 as i32).wrapping_sub(y);
    assert((x + minus_x) == 0);
    assert((z + minus_z) == 0);
    assert((minus_x / y) == minus_z);
    assert((minus_x / minus_y) == z);
    assert((x / minus_y) == minus_z);
}
