tooling/nargo_cli/tests/snapshots/execution_success/signed_division/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "z",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _124",
    "private parameters indices : [_0, _1, _2]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [(_0, 32)] []",
    "BLACKBOX::RANGE [(_1, 32)] []",
    "BLACKBOX::RANGE [(_2, 32)] []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 0 ], EXPR [ 2147483648 ]], outputs: [_3, _4]",
    "BLACKBOX::RANGE [(_3, 1)] []",
    "BLACKBOX::RANGE [(_4, 31)] []",
    "EXPR [ (1, _1) (-2147483648, _3) (-1, _4) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ 2147483648 ]], outputs: [_5, _6]",
    "BLACKBOX::RANGE [(_5, 1)] []",
    "BLACKBOX::RANGE [(_6, 31)] []",
    "EXPR [ (1, _0) (-2147483648, _5) (-1, _6) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (-2, _1, _3) (1, _1) (4294967296, _3) 0 ]], outputs: [_7]",
    "EXPR [ (-2, _1, _3) (1, _1) (4294967296, _3) (-1, _8) 0 ]",
    "EXPR [ (1, _7, _8) -1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-2, _0, _5) (1, _0) (4294967296, _5) 0 ], EXPR [ (1, _8) 0 ]], outputs: [_9, _10]",
    "BLACKBOX::RANGE [(_9, 32)] []",
    "BLACKBOX::RANGE [(_10, 32)] []",
    "EXPR [ (1, _8) (-1, _10) (-1, _11) -1 ]",
    "BLACKBOX::RANGE [(_11, 32)] []",
    "EXPR [ (-2, _0, _5) (-1, _8, _9) (1, _0) (4294967296, _5) (-1, _10) 0 ]",
    "EXPR [ (-1, _9) (-1, _12) 2147483648 ]",
    "EXPR [ (-2, _3, _5) (1, _3) (1, _5) (-1, _13) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _9) 0 ]], outputs: [_14]",
    "EXPR [ (1, _9, _14) (1, _15) -1 ]",
    "EXPR [ (1, _9, _15) 0 ]",
    "EXPR [ (2, _12, _13) (1, _9) (-1, _16) 0 ]",
    "EXPR [ (-1, _15) (-1, _17) 1 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _10) 0 ]], outputs: [_18]",
    "EXPR [ (1, _10, _18) (1, _19) -1 ]",
    "EXPR [ (1, _10, _19) 0 ]",
    "EXPR [ (-2, _5, _10) (4294967296, _5) (1, _10) (-1, _20) 0 ]",
    "EXPR [ (-1, _19) (-1, _21) 1 ]",
    "EXPR [ (1, _16, _17) (-1, _2) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _0) 340282366920938463463374607431768211456 ], EXPR [ 4294967296 ]], outputs: [_22, _23]",
    "BLACKBOX::RANGE [(_22, 222)] []",
    "BLACKBOX::RANGE [(_23, 32)] []",
    "EXPR [ (-1, _0) (-4294967296, _22) (-1, _23) 340282366920938463463374607431768211456 ]",
    "EXPR [ (-1, _22) (-1, _24) 5096253676302562286669017222071363378443840053029366383258766538131 ]",
    "BLACKBOX::RANGE [(_24, 222)] []",
    "BRILLIG CALL func 1: inputs: [EXPR [ (-1, _22) 5096253676302562286669017222071363378443840053029366383258766538131 ]], outputs: [_25]",
    "EXPR [ (-1, _22, _25) (5096253676302562286669017222071363378443840053029366383258766538131, _25) (1, _26) -1 ]",
    "EXPR [ (-1, _22, _26) (5096253676302562286669017222071363378443840053029366383258766538131, _26) 0 ]",
    "EXPR [ (1, _23, _26) (268435455, _26) (-1, _27) 0 ]",
    "BLACKBOX::RANGE [(_27, 32)] []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _2) 340282366920938463463374607431768211456 ], EXPR [ 4294967296 ]], outputs: [_28, _29]",
    "BLACKBOX::RANGE [(_28, 222)] []",
    "BLACKBOX::RANGE [(_29, 32)] []",
    "EXPR [ (-1, _2) (-4294967296, _28) (-1, _29) 340282366920938463463374607431768211456 ]",
    "EXPR [ (-1, _28) (-1, _30) 5096253676302562286669017222071363378443840053029366383258766538131 ]",
    "BLACKBOX::RANGE [(_30, 222)] []",
    "BRILLIG CALL func 1: inputs: [EXPR [ (-1, _28) 5096253676302562286669017222071363378443840053029366383258766538131 ]], outputs: [_31]",
    "EXPR [ (-1, _28, _31) (5096253676302562286669017222071363378443840053029366383258766538131, _31) (1, _32) -1 ]",
    "EXPR [ (-1, _28, _32) (5096253676302562286669017222071363378443840053029366383258766538131, _32) 0 ]",
    "EXPR [ (1, _29, _32) (268435455, _32) (-1, _33) 0 ]",
    "BLACKBOX::RANGE [(_33, 32)] []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _1) 340282366920938463463374607431768211456 ], EXPR [ 4294967296 ]], outputs: [_34, _35]",
    "BLACKBOX::RANGE [(_34, 222)] []",
    "BLACKBOX::RANGE [(_35, 32)] []",
    "EXPR [ (-1, _1) (-4294967296, _34) (-1, _35) 340282366920938463463374607431768211456 ]",
    "EXPR [ (-1, _34) (-1, _36) 5096253676302562286669017222071363378443840053029366383258766538131 ]",
    "BLACKBOX::RANGE [(_36, 222)] []",
    "BRILLIG CALL func 1: inputs: [EXPR [ (-1, _34) 5096253676302562286669017222071363378443840053029366383258766538131 ]], outputs: [_37]",
    "EXPR [ (-1, _34, _37) (5096253676302562286669017222071363378443840053029366383258766538131, _37) (1, _38) -1 ]",
    "EXPR [ (-1, _34, _38) (5096253676302562286669017222071363378443840053029366383258766538131, _38) 0 ]",
    "EXPR [ (1, _35, _38) (268435455, _38) (-1, _39) 0 ]",
    "BLACKBOX::RANGE [(_39, 32)] []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) (1, _23) 0 ], EXPR [ 4294967296 ]], outputs: [_40, _41]",
    "BLACKBOX::RANGE [(_40, 1)] []",
    "EXPR [ (1, _0) (1, _23) (-4294967296, _40) (-1, _41) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 2147483648 ], EXPR [ 4294967296 ]], outputs: [_42, _43]",
    "BLACKBOX::RANGE [(_42, 1)] []",
    "BLACKBOX::RANGE [(_43, 32)] []",
    "EXPR [ (1, _0) (-4294967296, _42) (-1, _43) 2147483648 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _23) 2147483648 ], EXPR [ 4294967296 ]], outputs: [_44, _45]",
    "BLACKBOX::RANGE [(_44, 1)] []",
    "BLACKBOX::RANGE [(_45, 32)] []",
    "EXPR [ (1, _23) (-4294967296, _44) (-1, _45) 2147483648 ]",
    "EXPR [ (-1, _42) (1, _44) (-1, _46) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _46) 0 ]], outputs: [_47]",
    "EXPR [ (1, _46, _47) (1, _48) -1 ]",
    "EXPR [ (1, _46, _48) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _41) 2147483648 ], EXPR [ 4294967296 ]], outputs: [_49, _50]",
    "BLACKBOX::RANGE [(_49, 1)] []",
    "BLACKBOX::RANGE [(_50, 32)] []",
    "EXPR [ (1, _41) (-4294967296, _49) (-1, _50) 2147483648 ]",
    "EXPR [ (1, _42) (-1, _49) (-1, _51) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _51) 0 ]], outputs: [_52]",
    "EXPR [ (1, _51, _52) (1, _53) -1 ]",
    "EXPR [ (1, _51, _53) 0 ]",
    "EXPR [ (1, _48, _53) (-1, _48) 0 ]",
    "EXPR [ (1, _41) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _2) (1, _29) 0 ], EXPR [ 4294967296 ]], outputs: [_54, _55]",
    "BLACKBOX::RANGE [(_54, 1)] []",
    "EXPR [ (1, _2) (1, _29) (-4294967296, _54) (-1, _55) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _2) 2147483648 ], EXPR [ 4294967296 ]], outputs: [_56, _57]",
    "BLACKBOX::RANGE [(_56, 1)] []",
    "BLACKBOX::RANGE [(_57, 32)] []",
    "EXPR [ (1, _2) (-4294967296, _56) (-1, _57) 2147483648 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _29) 2147483648 ], EXPR [ 4294967296 ]], outputs: [_58, _59]",
    "BLACKBOX::RANGE [(_58, 1)] []",
    "BLACKBOX::RANGE [(_59, 32)] []",
    "EXPR [ (1, _29) (-4294967296, _58) (-1, _59) 2147483648 ]",
    "EXPR [ (-1, _56) (1, _58) (-1, _60) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _60) 0 ]], outputs: [_61]",
    "EXPR [ (1, _60, _61) (1, _62) -1 ]",
    "EXPR [ (1, _60, _62) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _55) 2147483648 ], EXPR [ 4294967296 ]], outputs: [_63, _64]",
    "BLACKBOX::RANGE [(_63, 1)] []",
    "BLACKBOX::RANGE [(_64, 32)] []",
    "EXPR [ (1, _55) (-4294967296, _63) (-1, _64) 2147483648 ]",
    "EXPR [ (1, _56) (-1, _63) (-1, _65) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _65) 0 ]], outputs: [_66]",
    "EXPR [ (1, _65, _66) (1, _67) -1 ]",
    "EXPR [ (1, _65, _67) 0 ]",
    "EXPR [ (1, _62, _67) (-1, _62) 0 ]",
    "EXPR [ (1, _55) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 0 ], EXPR [ 2147483648 ]], outputs: [_68, _69]",
    "BLACKBOX::RANGE [(_68, 1)] []",
    "BLACKBOX::RANGE [(_69, 31)] []",
    "EXPR [ (1, _1) (-2147483648, _68) (-1, _69) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _23) 0 ], EXPR [ 2147483648 ]], outputs: [_70, _71]",
    "BLACKBOX::RANGE [(_70, 1)] []",
    "BLACKBOX::RANGE [(_71, 31)] []",
    "EXPR [ (1, _23) (-2147483648, _70) (-1, _71) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (-2, _1, _68) (1, _1) (4294967296, _68) 0 ]], outputs: [_72]",
    "EXPR [ (-2, _1, _68) (1, _1) (4294967296, _68) (-1, _73) 0 ]",
    "EXPR [ (1, _72, _73) -1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-2, _23, _70) (1, _23) (4294967296, _70) 0 ], EXPR [ (1, _73) 0 ]], outputs: [_74, _75]",
    "BLACKBOX::RANGE [(_74, 32)] []",
    "BLACKBOX::RANGE [(_75, 32)] []",
    "EXPR [ (1, _73) (-1, _75) (-1, _76) -1 ]",
    "BLACKBOX::RANGE [(_76, 32)] []",
    "EXPR [ (-2, _23, _70) (-1, _73, _74) (1, _23) (4294967296, _70) (-1, _75) 0 ]",
    "EXPR [ (-1, _74) (-1, _77) 2147483648 ]",
    "EXPR [ (-2, _68, _70) (1, _68) (1, _70) (-1, _78) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _74) 0 ]], outputs: [_79]",
    "EXPR [ (1, _74, _79) (1, _80) -1 ]",
    "EXPR [ (1, _74, _80) 0 ]",
    "EXPR [ (2, _77, _78) (1, _74) (-1, _81) 0 ]",
    "EXPR [ (-1, _80) (-1, _82) 1 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _75) 0 ]], outputs: [_83]",
    "EXPR [ (1, _75, _83) (1, _84) -1 ]",
    "EXPR [ (1, _75, _84) 0 ]",
    "EXPR [ (-2, _70, _75) (4294967296, _70) (1, _75) (-1, _85) 0 ]",
    "EXPR [ (-1, _84) (-1, _86) 1 ]",
    "EXPR [ (1, _81, _82) (-1, _29) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _35) 0 ], EXPR [ 2147483648 ]], outputs: [_87, _88]",
    "BLACKBOX::RANGE [(_87, 1)] []",
    "BLACKBOX::RANGE [(_88, 31)] []",
    "EXPR [ (1, _35) (-2147483648, _87) (-1, _88) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _23) 0 ], EXPR [ 2147483648 ]], outputs: [_89, _90]",
    "BLACKBOX::RANGE [(_89, 1)] []",
    "BLACKBOX::RANGE [(_90, 31)] []",
    "EXPR [ (1, _23) (-2147483648, _89) (-1, _90) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (-2, _35, _87) (1, _35) (4294967296, _87) 0 ]], outputs: [_91]",
    "EXPR [ (-2, _35, _87) (1, _35) (4294967296, _87) (-1, _92) 0 ]",
    "EXPR [ (1, _91, _92) -1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-2, _23, _89) (1, _23) (4294967296, _89) 0 ], EXPR [ (1, _92) 0 ]], outputs: [_93, _94]",
    "BLACKBOX::RANGE [(_93, 32)] []",
    "BLACKBOX::RANGE [(_94, 32)] []",
    "EXPR [ (1, _92) (-1, _94) (-1, _95) -1 ]",
    "BLACKBOX::RANGE [(_95, 32)] []",
    "EXPR [ (-2, _23, _89) (-1, _92, _93) (1, _23) (4294967296, _89) (-1, _94) 0 ]",
    "EXPR [ (-1, _93) (-1, _96) 2147483648 ]",
    "EXPR [ (-2, _87, _89) (1, _87) (1, _89) (-1, _97) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _93) 0 ]], outputs: [_98]",
    "EXPR [ (1, _93, _98) (1, _99) -1 ]",
    "EXPR [ (1, _93, _99) 0 ]",
    "EXPR [ (2, _96, _97) (1, _93) (-1, _100) 0 ]",
    "EXPR [ (-1, _99) (-1, _101) 1 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _94) 0 ]], outputs: [_102]",
    "EXPR [ (1, _94, _102) (1, _103) -1 ]",
    "EXPR [ (1, _94, _103) 0 ]",
    "EXPR [ (-2, _89, _94) (4294967296, _89) (1, _94) (-1, _104) 0 ]",
    "EXPR [ (-1, _103) (-1, _105) 1 ]",
    "EXPR [ (1, _100, _101) (-1, _2) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _35) 0 ], EXPR [ 2147483648 ]], outputs: [_106, _107]",
    "BLACKBOX::RANGE [(_106, 1)] []",
    "BLACKBOX::RANGE [(_107, 31)] []",
    "EXPR [ (1, _35) (-2147483648, _106) (-1, _107) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ 2147483648 ]], outputs: [_108, _109]",
    "BLACKBOX::RANGE [(_108, 1)] []",
    "BLACKBOX::RANGE [(_109, 31)] []",
    "EXPR [ (1, _0) (-2147483648, _108) (-1, _109) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (-2, _35, _106) (1, _35) (4294967296, _106) 0 ]], outputs: [_110]",
    "EXPR [ (-2, _35, _106) (1, _35) (4294967296, _106) (-1, _111) 0 ]",
    "EXPR [ (1, _110, _111) -1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-2, _0, _108) (1, _0) (4294967296, _108) 0 ], EXPR [ (1, _111) 0 ]], outputs: [_112, _113]",
    "BLACKBOX::RANGE [(_112, 32)] []",
    "BLACKBOX::RANGE [(_113, 32)] []",
    "EXPR [ (1, _111) (-1, _113) (-1, _114) -1 ]",
    "BLACKBOX::RANGE [(_114, 32)] []",
    "EXPR [ (-2, _0, _108) (-1, _111, _112) (1, _0) (4294967296, _108) (-1, _113) 0 ]",
    "EXPR [ (-1, _112) (-1, _115) 2147483648 ]",
    "EXPR [ (-2, _106, _108) (1, _106) (1, _108) (-1, _116) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _112) 0 ]], outputs: [_117]",
    "EXPR [ (1, _112, _117) (1, _118) -1 ]",
    "EXPR [ (1, _112, _118) 0 ]",
    "EXPR [ (2, _115, _116) (1, _112) (-1, _119) 0 ]",
    "EXPR [ (-1, _118) (-1, _120) 1 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _113) 0 ]], outputs: [_121]",
    "EXPR [ (1, _113, _121) (1, _122) -1 ]",
    "EXPR [ (1, _113, _122) 0 ]",
    "EXPR [ (-2, _108, _113) (4294967296, _108) (1, _113) (-1, _123) 0 ]",
    "EXPR [ (-1, _122) (-1, _124) 1 ]",
    "EXPR [ (1, _119, _120) (-1, _29) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]",
    "unconstrained func 1",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_integer_quotient",
    "directive_invert"
  ]
}
